--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Bienvenue !</h1>
-<p>Ceci est ma première variable : <%= @variable %>.</p>
-
+<!-- <p>Ceci est ma première variable : <%= @variable %>.</p> -->
+<p> Ceci est la page d'accueil</p>
 <% @variable.times do |i| %>
   <p> <%= i %> </p>
 <% end %>
