--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -1,6 +1,1 @@
-<h1>Bienvenue !</h1>
-<p>Ceci est ma première variable : <%= @variable %>.</p>
-
-<% @variable.times do |i| %>
-  <p> <%= i %> </p>
-<% end %>
+<h1>Bonjour <%= @user %> </h1>
