--- a/app/views/pages/_timeline.html.erb
+++ b/app/views/pages/_timeline.html.erb
@@ -1,7 +1,6 @@
         <hr>
         
         <div class="container">
-            <h4>Timeline Style : Demo-5</h4>
             <div class="row">
                 <div class="col-md-12">
                     <div class="main-timeline5">
@@ -19,7 +18,10 @@
                             <div class="timeline-content">
                                 <h3 class="title">ÉTUDIANT À TELECOM SAINT ETIENNE</h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
+                                    J'ai pu developper mes compétences en :
+                                    <li>Informatique</li>
+                                    <li>Réseaux</li>
+                                    <li>Gestion de projet</li>
                                 </p>
                             </div>
                         </div>
