--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,15 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="home">CV Adam Aleb</a>
+  <div class='container-fluid'>
+  <a class="navbar-brand" href="home">Accueil</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="parcours"> Parcours <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="competences">Compétences</a>
+      <a class="nav-item nav-link active" href="competences"> Compétences <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="projets">Projets</a>
       <a class="nav-item nav-link" href="contact">Me Contacter</a>
       <!-- <a class="nav-item nav-link disabled" href="projets" tabindex="-1" aria-disabled="true">Disabled</a> -->
     </div>
+  </div>
   </div>
 </nav>
