--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <div class="jumbotron">
-  <h1 class="display-4">Bonjour et bienvenue sur Mon CV en ligne</h1>
+  <h1 class="display-4">Bienvenue sur mon CV en ligne</h1>
   <p class="lead"> Si vous êtes ici c'est que vous voulez en savoir plus sur moi.</p>
     <p class="lead"> Vous êtes au bon endroit.</p>
   <hr class="my-4">
   <p>Pour nous soumettre un projet, c'est ici :</p>
   <a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus</a>
 </div>
-
+<h2>Mon Parcours :</h2>
 <%= render 'timeline' %>
