--- a/app/views/pages/_timeline.html.erb
+++ b/app/views/pages/_timeline.html.erb
@@ -1,11 +1,10 @@
-        <hr>
-        
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="main-timeline5">
-                        <div class="timeline">
-                            <div class="timeline-icon"><span class="year">2019</span></div>
+ <hr>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="main-timeline5">
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2019</span></div>
                             <div class="timeline-content">
                                 <h3 class="title">FREELANCE DEVELOPPEMENT WEB</h3>
                                 <p class="description">
@@ -18,9 +17,18 @@
                             <div class="timeline-content">
                                 <h3 class="title">ÉTUDIANT À TELECOM SAINT ETIENNE</h3>
                                 <p class="description">
+                                    Triple diplome :
+                                    <li>DU Cycle initial en Technologie de l'Information de Saint-Étienne</li>
+                                    <li>DUT Génie Électrique et Informatique Industrielle</li>
+                                    <li>Licence 2 de physique</li>
+                                </p>
+
+                                <p class='description'>
                                     J'ai pu developper mes compétences en :
                                     <li>Informatique</li>
                                     <li>Réseaux</li>
+                                    <li>Électronique</li>
+                                    <li>Traitement de l'image</li>
                                     <li>Gestion de projet</li>
                                 </p>
                             </div>
@@ -28,9 +36,11 @@
                         <div class="timeline">
                             <div class="timeline-icon"><span class="year">2016</span></div>
                             <div class="timeline-content">
-                                <h3 class="title">Web Desginer</h3>
+                                <h3 class="title">STAGE DE TECHNICIEN EN INFORMATIQUE - ASIS</h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
+                                    Developpement d'un logiciel de maintenance de serveur.
+                                    Exportation du projet sur Unix.
+                                    Installation de la solution chez le client.
                                 </p>
                             </div>
                         </div>
@@ -47,4 +57,4 @@
                 </div>
             </div>
         </div>
-        <hr>
+    <hr>
